2020-02-07  youenn fablet  <youenn@apple.com>

        [Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder
        https://bugs.webkit.org/show_bug.cgi?id=206582

        Reviewed by Eric Carlson.

        * wtf/PlatformHave.h:

2020-02-06  Mark Lam  <mark.lam@apple.com>

        Add a comment in StringView::setUnderlyingString(const StringView&) for clarification.
        https://bugs.webkit.org/show_bug.cgi?id=207368
        <rdar://problem/59211075>

        Reviewed by Keith Miller.

        Every time I read this code, I have to re-deduce why this code is thread safe.
        So, I'm just going to add a comment to document it.

        * wtf/text/StringView.cpp:
        (WTF::StringView::setUnderlyingString):

2020-02-06  Myles C. Maxfield  <mmaxfield@apple.com>

        REGRESSION(r254534): 1-3% regression on PLT
        https://bugs.webkit.org/show_bug.cgi?id=207244
        <rdar://problem/58821709>

        Reviewed by Simon Fraser.

        CTFontTransformGlyphsWithLanguage() is only acceptable on certain OSes.

        * wtf/PlatformHave.h:

2020-02-06  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r255910, r255970, and r255972.
        https://bugs.webkit.org/show_bug.cgi?id=207345

        Broke internal builds (Requested by ryanhaddad on #webkit).

        Reverted changesets:

        "[Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder"
        https://bugs.webkit.org/show_bug.cgi?id=206582
        https://trac.webkit.org/changeset/255910

        "[Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder"
        https://bugs.webkit.org/show_bug.cgi?id=206582
        https://trac.webkit.org/changeset/255970

        "[Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder"
        https://bugs.webkit.org/show_bug.cgi?id=206582
        https://trac.webkit.org/changeset/255972

2020-02-06  Ryan Haddad  <ryanhaddad@apple.com>

        [Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder